Build a REST API with .NET Core

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,7 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
+      "Microsoft": "None",
+      "Microsoft.AspNetCore": "Error",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   }
