Tweak NLog config to make this more explicit

--- a/nlog.config
+++ b/nlog.config
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      throwExceptions="false"
       throwConfigExceptions="false"
       autoReload="true"
       internalLogLevel="Warn"
@@ -27,7 +28,7 @@
   </targets>
 
   <rules>
-    <logger name="Microsoft.*" maxlevel="Info" final="true" />
+    <logger name="Microsoft.*" maxlevel="Info" final="true" /> <!-- blackhole -->
     <logger name="*" minlevel="Info" writeTo="ownFile-web" />
   </rules>
 </nlog>
